--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -2,14 +2,14 @@ $red: #b90d0d;
 $blue: #49a2dd;
 $green: #68c964;
 $black: #000000;
-$hover: #3261cf;
+$hover: #5b84e4;
 
 $dark: #a12929;
 $primary: #d62020;
 $secondary: #fd8888;
 $default: #ffffff;
 
-$background: #efefef;
+$background: #fafafa;
 $foreground: #ffffff;
 
 $textColor: #181818;
