--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,9 +1,12 @@
 @import url("https://fonts.googleapis.com/css?family=Nunito");
 
 @import "_variables";
+@import "_fonts";
 
 @import "_buttons";
 @import "_navbars";
+@import "_stores";
+@import "_products";
 
 * {
     margin: 0;
