--- a/resources/sass/_fonts.scss
+++ b/resources/sass/_fonts.scss
@@ -35,3 +35,10 @@ img {
     font-size: 1.6rem;
     width: 100%;
 }
+
+button {
+    font-size: 2.4rem;
+    &:hover {
+        cursor: pointer;
+    }
+}
