--- a/resources/sass/_products.scss
+++ b/resources/sass/_products.scss
@@ -1,4 +1,8 @@
 @mixin product() {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-between;
+    align-items: center;
     font-size: 2.2rem;
     text-align: center;
     padding: 25px;
