--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,7 @@
 @import "_navbars";
 @import "_stores";
 @import "_products";
+@import "_accounts";
 
 * {
     margin: 0;
@@ -34,4 +35,8 @@ html {
 .categories {
     padding: 25px;
     background: $foreground;
+}
+
+.account {
+    // display: ;
 }
