--- a/resources/sass/_accounts.scss
+++ b/resources/sass/_accounts.scss
@@ -1,22 +1,21 @@
 .account {
     background: $foreground;
     display: grid;
-    grid-template-columns: 0.2fr 1fr;
-    grid-template-areas:
-        "heading productsHeading"
-        "info products";
+    grid-template-columns: 0.3fr 1fr;
+    grid-template-areas: "info products";
     margin: 3% 5%;
     padding: 25px;
-    .heading {
-        grid-area: heading;
-    }
-    .products-heading {
-        grid-area: productsHeading;
-        vertical-align: bottom;
-    }
     .account-info {
         grid-area: info;
-        margin: 0 0 20px;
+        button {
+            margin: 25px 0 0;
+        }
+    }
+    .account-products {
+        grid-area: products;
+        .products-heading {
+            font-weight: 400;
+        }
     }
     .products {
         display: grid;
