--- a/resources/sass/_products.scss
+++ b/resources/sass/_products.scss
@@ -6,6 +6,9 @@
     font-size: 2.2rem;
     text-align: center;
     padding: 25px;
+    .image {
+        height: 200px;
+    }
     .name {
         color: $textColor;
     }
