--- a/resources/sass/_accounts.scss
+++ b/resources/sass/_accounts.scss
@@ -22,24 +22,32 @@
         grid-template-columns: repeat(auto-fit, minmax(100px, 300px));
         grid-area: products;
     }
-    &.formContainer {
-        display: flex;
-        flex-flow: column nowrap;
-        justify-content: center;
-        align-items: center;
-        max-width: 400px;
-        h2 {
-            margin-bottom: 15px;
-        }
-        box-shadow: 0 0 25px 2px #00000020;
-    }
+}
+
+.formContainer {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+    height: 80vh;
 }
 
 .accountForm {
     background: $foreground;
+    box-shadow: 0 0 25px 2px #00000020;
+    padding: 3%;
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
+    align-items: center;
+    .form {
+        display: flex;
+        flex-flow: column nowrap;
+        justify-content: center;
+    }
+    h2 {
+        margin-bottom: 15px;
+    }
     label {
         font-size: 1.8rem;
         color: $textColor;
@@ -55,7 +63,7 @@
         padding: 2%;
         font-size: 1.8rem;
         color: $textColor;
-        margin-bottom: 15px;
+        margin-bottom: 5px;
         max-width: 250px;
         &:focus {
             outline: 1px solid $secondary;
@@ -65,5 +73,13 @@
     button {
         margin-top: 15px;
         max-width: 250px;
+    }
+    button.link {
+        font-size: 1.6rem;
+        padding: 0 !important;
+        text-align: left;
+    }
+    @media only screen and (max-width: 1200px) {
+        padding: 25px;
     }
 }
