--- a/resources/sass/_accounts.scss
+++ b/resources/sass/_accounts.scss
@@ -35,7 +35,7 @@
 .accountForm {
     background: $foreground;
     box-shadow: 0 0 25px 2px #00000020;
-    padding: 3%;
+    padding: 25px;
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
@@ -63,7 +63,7 @@
         padding: 2%;
         font-size: 1.8rem;
         color: $textColor;
-        margin-bottom: 5px;
+        margin-bottom: 25px;
         max-width: 250px;
         &:focus {
             outline: 1px solid $secondary;
@@ -72,7 +72,7 @@
     }
     button {
         margin-top: 15px;
-        max-width: 250px;
+        width: 250px;
     }
     button.link {
         font-size: 1.6rem;
