--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -5,7 +5,7 @@ $hover: #5b84e4;
 
 $dark: #a12929;
 $primary: #d62020;
-$secondary: #fd8888;
+$secondary: #ff746a;
 $default: #ffffff;
 $black: #000000;
 
