Fix product list styles

--- a/resources/sass/_stores.scss
+++ b/resources/sass/_stores.scss
@@ -13,6 +13,8 @@
 
 .productList {
     grid-area: products;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
 
 .shopHeader {
