--- a/resources/sass/_stores.scss
+++ b/resources/sass/_stores.scss
@@ -3,7 +3,7 @@
     grid-template-columns: 0.25fr 1fr;
     grid-template-areas:
         "header header"
-        "category products";
+        "products products";
     padding: 25px;
 }
 
