--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -57,3 +57,9 @@ input {
         padding-left: 2px;
     }
 }
+
+.flex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
